--- a/app/scss/_globales.scss
+++ b/app/scss/_globales.scss
@@ -1,3 +1,55 @@
 html {
-    font-size: 100%;
+  font-size: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: $font-md;
+  font-family: "Public Sans", sans-serif;
+  font-weight: 300;
+  color: $grayisBlue;
+  line-height: 1.3;
+}
+
+//Link Default
+a,
+a:visited,
+a:hover {
+  text-decoration: none;
+  color: $grayisBlue;
+}
+
+//flexbox
+.flex {
+  display: flex;
+
+  &-jc-c {
+    justify-content: center;
+  }
+  &-jc-sb {
+    justify-content: space-between;
+  }
+  &-ai-c {
+    align-items: center;
+  }
+}
+
+// Buttons
+button,
+.button {
+  padding: 0.875rem 2.1875rem;
+  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  color: $white;
+  font-weight: 700;
 }
