--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,18 @@
 .header {
+  // Hamburger Open Styles
+  &.open {
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
   nav {
     padding: 1.125rem 1.5rem;
   }
@@ -14,9 +28,11 @@
       width: 26px;
       height: 2px;
       background-color: $darkBlue;
+      transform-origin: 3px 1px;
+      transition: all 300ms ease-in-out;
 
       &:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 5px;
       }
     }
   }
@@ -60,6 +76,16 @@
       opacity: 0.75;
     }
   }
+}
+
+.overlay {
+  opacity: 0;
+  position: fixed;
+  top: 3.75rem;
+  right: 0px;
+  left: 0px;
+  bottom: 0px;
+  background: linear-gradient($darkBlue, transparent);
 }
 
 // Visibility
