--- a/app/scss/_animation.scss
+++ b/app/scss/_animation.scss
@@ -1,3 +1,6 @@
+.has-fade {
+  visibility: hidden;
+}
 @keyframes fade-in {
   from {
     visibility: hidden;
@@ -8,6 +11,7 @@
     opacity: 0;
   }
   to {
+    visibility: visible;
     opacity: 1;
   }
 }
@@ -25,7 +29,7 @@
     opacity: 0;
   }
   to {
-    visibility: visible;
+    visibility: hidden;
     opacity: 0;
   }
 }
