--- a/app/scss/_globales.scss
+++ b/app/scss/_globales.scss
@@ -17,6 +17,10 @@ body {
   font-weight: 300;
   color: $grayisBlue;
   line-height: 1.3;
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 //Link Default
