--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
   // Hamburger Open Styles
   &.open {
-    .header__menu {
+    .header__toggle {
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -14,7 +14,10 @@
     }
   }
   nav {
-    padding: 1.125rem 1.5rem;
+    position: relative;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
+    background-color: $white;
   }
   &__logo {
     img {
@@ -22,7 +25,7 @@
       height: 1.375rem;
     }
   }
-  &__menu {
+  &__toggle {
     > span {
       display: block;
       width: 26px;
@@ -34,6 +37,24 @@
       &:not(:last-child) {
         margin-bottom: 5px;
       }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    left: 50%;
+    width: calc(100% - 3rem);
+    padding: 1.625rem;
+    margin-top: 1.5rem;
+    border-radius: 5px;
+    background: $white;
+    transform: translateX(-50%);
+
+    a {
+      display: block;
+      text-align: center;
+      padding: 0.625rem;
+      color: $darkBlue;
     }
   }
 
@@ -78,10 +99,16 @@
   }
 }
 
+// Spacing
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+// Superposition(Overlay)
 .overlay {
   opacity: 0;
   position: fixed;
-  top: 3.75rem;
+  top: 0px;
   right: 0px;
   left: 0px;
   bottom: 0px;
