--- a/app/scss/_globales.scss
+++ b/app/scss/_globales.scss
@@ -21,6 +21,16 @@ body {
   &.no-scroll {
     overflow: hidden;
   }
+
+  @include breakpoint-up(large) {
+    font-size: $font-lg;
+  }
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0px;
 }
 
 //Link Default
@@ -29,6 +39,38 @@ a:visited,
 a:hover {
   text-decoration: none;
   color: $grayisBlue;
+}
+
+// Spacing
+.container {
+  margin: 0 auto;
+  max-width: 69.275rem;
+  &--pall {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--py {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+  &--px {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--pt {
+    padding-top: 2.25rem;
+  }
+  &--pr {
+    padding-right: 1.5rem;
+  }
+  &--pb {
+    padding-bottom: 2.25rem;
+  }
+  &--pl {
+    padding-left: 1.5rem;
+  }
 }
 
 //flexbox
@@ -56,4 +98,10 @@ button,
   cursor: pointer;
   color: $white;
   font-weight: 700;
+  font-size: $font-sm;
+  transition: opacity 300ms ease-in-out;
+
+  &:hover {
+    opacity: 0.75;
+  }
 }
