--- a/app/scss/_globales.scss
+++ b/app/scss/_globales.scss
@@ -17,6 +17,7 @@ body {
   font-weight: 300;
   color: $grayisBlue;
   line-height: 1.3;
+  min-height: 300vh;
 
   &.no-scroll {
     overflow: hidden;
@@ -30,7 +31,30 @@ body {
 h1,
 h2,
 h3 {
+  text-align: center;
+  font-weight: 300;
+  color: $darkBlue;
+  line-height: 1.15;
   margin-top: 0px;
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+
+  @include breakpoint-up(large) {
+    font-size: $font-xlg;
+    text-align: left;
+  }
+}
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+
+  @include breakpoint-up(large) {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
 }
 
 //Link Default
@@ -46,27 +70,40 @@ a:hover {
   margin: 0 auto;
   max-width: 69.275rem;
   &--pall {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
     padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
     padding-left: 1.5rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
   &--py {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
   }
   &--px {
     padding-right: 1.5rem;
     padding-left: 1.5rem;
   }
   &--pt {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+    }
   }
   &--pr {
     padding-right: 1.5rem;
   }
   &--pb {
-    padding-bottom: 2.25rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-bottom: 6rem;
+    }
   }
   &--pl {
     padding-left: 1.5rem;
