--- a/app/scss/_globales.scss
+++ b/app/scss/_globales.scss
@@ -18,6 +18,7 @@ body {
   color: $grayisBlue;
   line-height: 1.3;
   min-height: 300vh;
+  overflow-x: hidden;
 
   &.no-scroll {
     overflow: hidden;
@@ -128,8 +129,9 @@ a:hover {
 // Buttons
 button,
 .button {
+  position: relative;
   padding: 0.875rem 2.1875rem;
-  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  background-image: linear-gradient(to right, $limeGreen, $brightCyan);
   border: 0;
   border-radius: 50px;
   cursor: pointer;
@@ -138,7 +140,20 @@ button,
   font-size: $font-sm;
   transition: opacity 300ms ease-in-out;
 
-  &:hover {
-    opacity: 0.75;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 50px;
+
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+  }
+  &:hover::before {
+    opacity: 1;
   }
 }
