--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -9,7 +9,7 @@
   }
   &__image {
     position: relative;
-    background-image: url("images/bg-intro-mobile.svg");
+    background-image: url("../images/bg-intro-mobile.svg");
     min-height: 17.5rem;
     background-size: cover;
     background-repeat: no-repeat;
@@ -32,7 +32,7 @@
       @include breakpoint-up(large) {
         content: "";
         position: absolute;
-        background-image: url("images/bg-intro-desktop.svg");
+        background-image: url("../images/bg-intro-desktop.svg");
         height: 100%;
         // background-size: 93%;
         background-repeat: no-repeat;
@@ -47,7 +47,7 @@
       content: "";
       width: 100%;
       height: 100%;
-      background-image: url("images/image-mockups.png");
+      background-image: url("../images/image-mockups.png");
       background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
